# HolylandAward

./: .env.example  .env.server.example  .gitignore  DEPLOYMENT.md  DOCKER.md  README.md  docker-compose.dev-server.yml  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: .dockerignore  Dockerfile  Dockerfile.dev  MIGRATIONS.md  alembic.ini  example.adi.txt  pyproject.toml  sample_log.adi  uv.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_qso_spotter_cascade.py  005_maintenance_mode.py  2f406a3942f1_initial_migration_with_users_qso_logs_.py  56ef1ee4b63b_add_clerk_user_id_email_username_to_.py  9b241c567b38_create_qso_logs_table.py  9be008a716cd_add_region_field_to_users_table.py
backend/src/: adif_service.py  area_grids.py  database.py  lifespan.py  main.py  migrations_setup.py  utils.py
backend/src/award_checkers/: award_checker.py  il_checker.py  reg1_checker.py  reg2_3_checker.py
backend/src/qsos/: models.py  qsos_repository.py  repository.py  router.py  schema.py  service.py
backend/src/system_settings/: models.py  repository.py  router.py  schema.py
backend/src/users/: admin_router.py  models.py  repository.py  router.py  schema.py  service.py
backend/tests/: conftest.py  test_adif_service.py  test_api_routes.py  test_qsos_service.py  test_users_service.py
frontend/: .dockerignore  .env.example  DESIGN_SYSTEM.md  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  (+2 more)
(+57 files in other folders)
