[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adif-io>=0.5.3",
    "alembic>=1.16.4",
    "clerk-backend-api>=3.3.0",
    "fastapi>=0.116.1",
    "ngrok>=1.5.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]
